# boxops

./: .envrc  .gitignore  nuget.config
code/: .gitignore  Directory.Build.props  Directory.Packages.props
code/aperture/: Cargo.toml  build.rs
code/aperture/proptest-regressions/: focus.txt
code/aperture/src/: focus.rs  lens.rs  lib.rs  main.rs  old_main
code/aperture/src/focus/: error.rs  exec.rs  plan.rs  schema.rs  transport.rs
code/aperture/src/lens/: cst.rs  diag.rs  grammar.llw  hoist.rs  lexer.rs  location.rs  lower.rs  parse.rs  parser.rs  query.rs  schema.rs  ty.rs
code/configerator/: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml
code/configerator/include/: rocksdb_shim.h
code/configerator/src/: rocksdb_shim.cpp
code/configerator/src/configerator/: ImportDB.py  __init__.py  _rocksdb_shim.py  cli.py
code/configeratorc/: CMakeLists.txt  pyproject.toml
code/configeratorc/include/: rocksdb_shim.h
code/configeratorc/src/: rocksdb_shim.cpp
code/glean/: Cargo.toml  build.rs
code/glean/src/: main.rs
code/kiln/: .gitignore  BUCK  Makefile  go.mod  go.sum  main.go
code/kiln/ord/: ord.go
code/kiln/parser/: errors.go  parser.go  parser_test.go  primitive.go  source_position.go  source_span.go
code/kiln/path/: posix.go
code/kiln/slices/: slices.go
code/search/: Cargo.toml  build.rs
code/search/src/: grammar.llw  lexer.rs  main.rs  parser.rs
code/skycastle/: CHANGELOG.md  LICENSE  README  README.md  example.star  foo.star  go.mod  go.sum  main.go  skycastle.proto
code/skycastle/examples/: example.star  go.star
code/skycastle/graph/: action.go  actionCursor.go  actionInput.go  actionOutput.go  artifact.go  artifactConsumer.go  artifactCursor.go  artifactProducer.go  errors.go  graph.go  transaction.go
toolchains/: BUCK
www/: .envrc  .gitignore  .prettierrc  .yarnrc.yml  eslint.config.mjs  package.json  relay.config.js  schema.graphql
www/guitar/: .envrc  .pnp.cjs  eslint.config.js  package.json  relay.config.json  schema.graphql  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+494 files in other folders)
