[build-system]
requires = ["scikit-build-core>=0.11.6"]
build-backend = "scikit_build_core.build"

[project]
name = "configerator"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "protobuf>=6.33.1",
]

[project.scripts]
configerator = "configerator.cli:main"

[tool.scikit-build]
wheel.packages = ["src/configerator"]
cmake.version = ">=3.22.1"